crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R1_plus_R3.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__unary_wrapper_ladder__R1_plus_R3.rs:5:24
  |
5 |    let _ = R1::new() + R3::new();
  |                        ^^^^^^^^^ expected `()`, found `RelativeTo<()>`
  |
  = note: expected struct `RelativeTo<RelativeTo<RelativeTo<()>>>`
             found struct `RelativeTo<RelativeTo<RelativeTo<RelativeTo<()>>>>`
